<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/elance"
    tools:context=".FreelancerDashboard">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="108dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/browse"
        android:textAllCaps="true"
        android:textColor="@color/elance"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view1"
        app:layout_constraintVertical_bias="0.464" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="108dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/browse"
        android:textAllCaps="true"
        android:textColor="@color/elance"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view1"
        app:layout_constraintVertical_bias="0.464" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="108dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/payments"
        android:textAllCaps="true"
        android:textColor="@color/elance"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="53dp"
        android:layout_height="65dp"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        android:contentDescription="@string/profileimage" />

    <Button
        android:id="@+id/btnLogoutdashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anonymous_pro_bold"
        android:text="@string/logoutdashboard"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <TextView
        android:id="@+id/browse"
        android:layout_width="108dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/browse"
        android:textAllCaps="true"
        android:textColor="@color/elance"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view1"
        app:layout_constraintVertical_bias="0.464" />

    <TextView
        android:id="@+id/hub"
        android:layout_width="87dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/categoriesfreelance"
        android:textAllCaps="true"
        android:textColor="@color/elance"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view1"
        app:layout_constraintVertical_bias="0.475" />

    <TextView
        android:id="@+id/payments"
        android:layout_width="108dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/payments"
        android:textAllCaps="true"
        android:textColor="@color/elance"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anonymous_pro_bold"
        android:text="@string/dashboard"
        android:textColor="#EF6967"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <ImageView
        android:id="@+id/image_view1"
        android:layout_width="107dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_blog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        android:contentDescription="@string/blogimage" />

    <TextView
        android:id="@+id/blog"
        android:layout_width="108dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/blogdashboard"
        android:textAllCaps="true"
        android:textColor="@color/elance"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/image_view2"
        android:layout_width="107dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        android:contentDescription="@string/paymentimage" />

    <ImageView
        android:id="@+id/image_view3"
        android:layout_width="94dp"
        android:layout_height="79dp"
        android:src="@drawable/ic_freelance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688"
        android:contentDescription="@string/settingsimage" />

    <ImageView
        android:id="@+id/image_view4"
        android:layout_width="103dp"
        android:layout_height="78dp"
        android:src="@drawable/ic_browse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        android:contentDescription="@string/browseimage" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anonymous_pro_bold"
        android:text="@string/back_to_profile"
        android:textColor="#EF6967"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

</androidx.constraintlayout.widget.ConstraintLayout>